--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+    <color name="blue_50">#F3F6FB</color>
+    <color name="blue_100">#E7F0FB</color>
+    <color name="blue_500">#306FE1</color>
+    <color name="blue_600">#254EBE</color>
+    <color name="gray_50">#F8F9FC</color>
+    <color name="gray_100">#F3F6FA</color>
+    <color name="gray_150">#E5E9ED</color>
+    <color name="gray_200">#BAC1C8</color>
+    <color name="gray_250">#9AA0A7</color>
+    <color name="gray_300">#818891</color>
+    <color name="gray_warm_400">#666666</color>
+    <color name="gray_400">#575C61</color>
+    <color name="gray_600">#121518</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
