--- a/app/src/main/res/layout/item_account.xml
+++ b/app/src/main/res/layout/item_account.xml
@@ -1,36 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/ivBankLogo"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="18dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:src="@drawable/ic_launcher_background"
-        android:layout_width="36dp"
-        android:layout_height="36dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvPageTitle"
-        android:text="입출금 쏠편한 입출금통장(저축예금)"
         android:layout_width="wrap_content"
-        android:layout_marginStart="8dp"
-        app:layout_constraintTop_toTopOf="@id/ivBankLogo"
-        app:layout_constraintStart_toEndOf="@id/ivBankLogo"
         android:layout_height="wrap_content"
-        android:theme="@style/Subhead2"/>
+        android:layout_marginStart="8dp"
+        android:text="입출금 쏠편한 입출금통장(저축예금)"
+        android:textColor="@color/gray_warm_400"
+        android:theme="@style/Subhead2"
+        app:layout_constraintStart_toEndOf="@id/ivBankLogo"
+        app:layout_constraintTop_toTopOf="@id/ivBankLogo" />
 
     <TextView
-        tools:text="쏠편한 입출금통장(저축예금)"
-        app:layout_constraintStart_toStartOf="@id/tvPageTitle"
-        app:layout_constraintBottom_toBottomOf="@id/ivBankLogo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:theme="@style/Body1"/>
+        android:textColor="@color/gray_warm_400"
+        android:theme="@style/Body1"
+        app:layout_constraintBottom_toBottomOf="@id/ivBankLogo"
+        app:layout_constraintStart_toStartOf="@id/tvPageTitle"
+        tools:text="쏠편한 입출금통장(저축예금)" />
+
+    <TextView
+        android:id="@+id/tvMoney"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="41dp"
+        android:textColor="@color/gray_600"
+        android:theme="@style/Display5"
+        app:layout_constraintStart_toStartOf="@id/ivBankLogo"
+        app:layout_constraintTop_toBottomOf="@+id/ivBankLogo"
+        tools:text="3,964,717원" />
+
+    <TextView
+        android:id="@+id/tvTransfer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/shape_radius6_blue100"
+        android:paddingHorizontal="35dp"
+        android:paddingVertical="10dp"
+        android:text="@string/transfer"
+        android:textColor="@color/blue_500"
+        android:theme="@style/Subhead2"
+        app:layout_constraintStart_toStartOf="@id/ivBankLogo"
+        app:layout_constraintTop_toBottomOf="@id/tvMoney" />
+
+    <TextView
+        android:id="@+id/tvHeyoung"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="7dp"
+        android:background="@drawable/shape_radius6_blue100"
+        android:paddingHorizontal="12dp"
+        android:paddingVertical="10dp"
+        android:text="@string/hey_young"
+        android:textColor="@color/blue_500"
+        android:theme="@style/Subhead2"
+        app:layout_constraintStart_toEndOf="@id/tvTransfer"
+        app:layout_constraintTop_toTopOf="@id/tvTransfer" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvLastTransaction"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvHeyoung" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
