--- a/app/src/main/res/layout/item_last_account.xml
+++ b/app/src/main/res/layout/item_last_account.xml
@@ -2,14 +2,15 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="81dp"
+    android:layout_height="43dp"
     android:background="@drawable/shape_radius6_gray50">
 
     <ImageView
         android:id="@+id/ivBankLogo"
         android:layout_width="22dp"
         android:layout_height="22dp"
+        android:layout_marginStart="8dp"
         android:layout_marginVertical="11dp"
         android:src="@mipmap/ic_launcher_round"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -18,8 +19,11 @@
 
     <TextView
         android:id="@+id/tvName"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:maxLines="1"
+        android:ellipsize="end"
         android:layout_marginStart="7dp"
         android:theme="@style/Subhead2"
         app:layout_constraintBottom_toTopOf="@id/tvMoney"
@@ -29,9 +33,11 @@
 
     <TextView
         android:id="@+id/tvMoney"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:theme="@style/Body1"
+        android:maxLines="1"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@id/tvName"
         app:layout_constraintTop_toBottomOf="@id/tvName"
