--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/tvTitle"
+            android:id="@+id/ivBack"
             style="@style/Headline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -34,10 +34,10 @@
             android:layout_marginEnd="2dp"
             android:padding="10dp"
             android:src="@drawable/ic_message"
-            app:layout_constraintBottom_toBottomOf="@id/tvTitle"
+            app:layout_constraintBottom_toBottomOf="@id/ivBack"
             app:layout_constraintDimensionRatio="1"
             app:layout_constraintEnd_toStartOf="@id/ivMic"
-            app:layout_constraintTop_toTopOf="@id/tvTitle" />
+            app:layout_constraintTop_toTopOf="@id/ivBack" />
 
         <ImageView
             android:id="@+id/ivMic"
