--- a/app/src/main/res/layout/activity_transfer1.xml
+++ b/app/src/main/res/layout/activity_transfer1.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -99,9 +100,16 @@
             android:layout_height="44dp"
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="13dp"
+            android:background="@drawable/shape_radius8_gray100"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/etSearch" />
+            app:layout_constraintTop_toBottomOf="@id/etSearch"
+            app:tabBackground="@drawable/selector_account_tab"
+            app:tabIndicatorHeight="0dp"
+            app:tabRippleColor="@null"
+            app:tabSelectedTextColor="@color/gray_600"
+            app:tabTextAppearance="@style/Subhead2"
+            app:tabTextColor="@color/gray_400" />
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/vpAccountList"
