--- a/app/src/main/res/layout/activity_transfer2.xml
+++ b/app/src/main/res/layout/activity_transfer2.xml
@@ -84,7 +84,7 @@
 
     <RelativeLayout
         android:id="@+id/shape_myaccount"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
@@ -120,74 +120,75 @@
 
     </RelativeLayout>
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button_andr"
-        android:layout_width="58dp"
-        android:layout_height="32dp"
-        android:layout_marginTop="12dp"
-        android:background="@drawable/btn_transfer_money_unit"
-        android:clipToOutline="true"
-        android:text="1만"
-        android:textAppearance="@style/Body3"
-        android:textColor="#306FE1"
-        app:layout_constraintStart_toStartOf="@id/shape_myaccount"
-        app:layout_constraintTop_toBottomOf="@id/shape_myaccount" />
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/button_andr"
+            android:layout_width="wrap_content"
+            android:layout_height="32dp"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/btn_transfer_money_unit"
+            android:clipToOutline="true"
+            android:text="1만"
+            android:textAppearance="@style/Body3"
+            android:textColor="#306FE1"
+            app:layout_constraintStart_toStartOf="@id/shape_myaccount"
+            app:layout_constraintTop_toBottomOf="@id/shape_myaccount" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button_andr_2"
-        android:layout_width="58dp"
-        android:layout_height="32dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="14dp"
-        android:background="@drawable/btn_transfer_money_unit"
-        android:clipToOutline="true"
-        android:text="5만"
-        android:textAppearance="@style/Body3"
-        android:textColor="#306FE1"
-        app:layout_constraintStart_toEndOf="@id/button_andr"
-        app:layout_constraintTop_toBottomOf="@id/shape_myaccount" />
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/button_andr_2"
+            android:layout_width="wrap_content"
+            android:layout_height="32dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="14dp"
+            android:background="@drawable/btn_transfer_money_unit"
+            android:clipToOutline="true"
+            android:text="5만"
+            android:textAppearance="@style/Body3"
+            android:textColor="#306FE1"
+            app:layout_constraintStart_toEndOf="@id/button_andr"
+            app:layout_constraintTop_toBottomOf="@id/shape_myaccount"/>
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button_andr_3"
-        android:layout_width="58dp"
-        android:layout_height="32dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="14dp"
-        android:background="@drawable/btn_transfer_money_unit"
-        android:clipToOutline="true"
-        android:text="10만"
-        android:textAppearance="@style/Body3"
-        android:textColor="#306FE1"
-        app:layout_constraintStart_toEndOf="@id/button_andr_2"
-        app:layout_constraintTop_toBottomOf="@id/shape_myaccount" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button_andr_4"
-        android:layout_width="58dp"
-        android:layout_height="32dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="14dp"
-        android:background="@drawable/btn_transfer_money_unit"
-        android:clipToOutline="true"
-        android:text="100만"
-        android:textAppearance="@style/Body3"
-        android:textColor="#306FE1"
-        app:layout_constraintStart_toEndOf="@id/button_andr_3"
-        app:layout_constraintTop_toBottomOf="@id/shape_myaccount" />
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/button_andr_3"
+            android:layout_width="wrap_content"
+            android:layout_height="32dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="14dp"
+            android:background="@drawable/btn_transfer_money_unit"
+            android:clipToOutline="true"
+            android:text="10만"
+            android:textAppearance="@style/Body3"
+            android:textColor="#306FE1"
+            app:layout_constraintStart_toEndOf="@id/button_andr_2"
+            app:layout_constraintTop_toBottomOf="@id/shape_myaccount" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button_andr_5"
-        android:layout_width="58dp"
-        android:layout_height="32dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="14dp"
-        android:background="@drawable/btn_transfer_money_unit"
-        android:clipToOutline="true"
-        android:text="전액"
-        android:textAppearance="@style/Body3"
-        android:textColor="#306FE1"
-        app:layout_constraintStart_toEndOf="@id/button_andr_4"
-        app:layout_constraintTop_toBottomOf="@id/shape_myaccount" />
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/button_andr_4"
+            android:layout_width="wrap_content"
+            android:layout_height="32dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="14dp"
+            android:background="@drawable/btn_transfer_money_unit"
+            android:clipToOutline="true"
+            android:text="100만"
+            android:textAppearance="@style/Body3"
+            android:textColor="#306FE1"
+            app:layout_constraintStart_toEndOf="@id/button_andr_3"
+            app:layout_constraintTop_toBottomOf="@id/shape_myaccount" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/button_andr_5"
+            android:layout_width="wrap_content"
+            android:layout_height="32dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="14dp"
+            android:background="@drawable/btn_transfer_money_unit"
+            android:clipToOutline="true"
+            android:text="전액"
+            android:textAppearance="@style/Body3"
+            android:textColor="#306FE1"
+            app:layout_constraintStart_toEndOf="@id/button_andr_4"
+            app:layout_constraintTop_toBottomOf="@id/shape_myaccount"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_keypad_1"
@@ -337,16 +338,15 @@
         android:id="@+id/btn_next_button"
         android:layout_width="0dp"
         android:layout_height="52dp"
-        android:layout_marginHorizontal="20dp"
         android:background="@color/blue_500"
         android:clipToOutline="true"
         android:text="다음"
         android:textAppearance="@style/Headline"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/button_keypad_00" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="15dp"/>
 
     <!--    <ImageButton-->
     <!--        android:layout_width="wrap_content"-->
