--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,10 +9,10 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="20dp"
         tools:context=".home.HomeFragment">
 
         <View
+            android:layout_marginHorizontal="20dp"
             android:id="@+id/adView"
             android:layout_width="0dp"
             android:layout_height="70dp"
@@ -61,6 +61,7 @@
             app:layout_constraintTop_toBottomOf="@id/tvBannerTitle" />
 
         <View
+            android:layout_marginHorizontal="20dp"
             android:id="@+id/myAccountView"
             android:layout_width="0dp"
             android:layout_height="49dp"
@@ -86,8 +87,8 @@
             style="@style/Subhead2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/all_account_look"
             android:layout_marginEnd="8dp"
+            android:text="@string/all_account_look"
             android:textColor="@color/blue_500"
             app:layout_constraintBottom_toBottomOf="@id/tvMyAccount"
             app:layout_constraintEnd_toStartOf="@id/ivArrow"
@@ -97,8 +98,8 @@
             android:id="@+id/ivArrow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_right_blue_arrow"
             android:layout_marginEnd="18dp"
+            android:src="@drawable/ic_right_blue_arrow"
             app:layout_constraintBottom_toBottomOf="@id/tvAllAccount"
             app:layout_constraintEnd_toEndOf="@id/myAccountView"
             app:layout_constraintTop_toTopOf="@id/tvAllAccount" />
@@ -112,16 +113,23 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/myAccountView" />
 
-        <com.google.android.material.tabs.TabLayout
+        <com.tbuonomo.viewpagerdotsindicator.SpringDotsIndicator
             android:id="@+id/indicator"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
+            android:layout_marginTop="16dp"
+            app:dotsColor="@color/gray_400"
+            app:dotsCornerRadius="8dp"
+            app:dotsSize="8dp"
+            app:dotsSpacing="9dp"
+            app:dotsStrokeColor="@color/gray_300"
+            app:dotsStrokeWidth="2dp"
             app:layout_constraintEnd_toEndOf="@id/vpMyAccount"
             app:layout_constraintStart_toStartOf="@id/vpMyAccount"
             app:layout_constraintTop_toBottomOf="@id/vpMyAccount" />
 
         <View
+            android:layout_marginHorizontal="20dp"
             android:id="@+id/transactionView"
             android:layout_width="0dp"
             android:layout_height="44dp"
@@ -199,6 +207,7 @@
             app:layout_constraintTop_toTopOf="@id/transactionView" />
 
         <View
+            android:layout_marginHorizontal="20dp"
             android:id="@+id/pullLogoView"
             android:layout_width="0dp"
             android:layout_height="80dp"
@@ -239,6 +248,7 @@
             app:layout_constraintTop_toTopOf="@id/pullLogoView" />
 
         <androidx.constraintlayout.helper.widget.Flow
+            android:layout_marginHorizontal="20dp"
             android:id="@+id/menuFlow"
             android:layout_width="0dp"
             android:layout_height="165dp"
