feat(editText): editText 디자인 추가

--- a/app/src/main/res/layout/activity_transfer1.xml
+++ b/app/src/main/res/layout/activity_transfer1.xml
@@ -85,7 +85,11 @@
         <EditText
             android:id="@+id/etSearch"
             android:layout_width="0dp"
-            android:layout_height="50dp"
+            android:layout_height="60dp"
+            android:padding="10dp"
+            android:background="@drawable/shape_radius14_stroke_gray150"
+            android:drawableEnd="@drawable/ic_search"
+            android:drawablePadding="10dp"
             android:layout_marginTop="28dp"
             android:hint="@string/search_hint"
             app:layout_constraintEnd_toEndOf="parent"
